--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
    </nav>
    <div class="container">
      <div class="blurb">
-       <h1>Parallel A* Search</h1>
+       <h1>Parallel A* Search Project</h1>
+      <h2>Lucas Wu | Katrina Hu</h2>
        <p>15-418 Final Project @ Carnegie Mellon University</p>
      </div>
    </div>
