--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
    <div class="container">
      <div class="blurb">
        <h1>Parallel A* Search Project</h1>
-       <p>Lucas Wu, Katrina Hu | 15-418 Final Project @ Carnegie Mellon University</p>
+      <h2>Lucas Wu | Katrina Hu</h2>
+       <p>15-418 Final Project @ Carnegie Mellon University</p>
      </div>
    </div>
    <footer>
@@ -28,7 +29,7 @@
    <h2>Project Proposal</h2>
    <p>We propose to parallelize A* search in this project. There have been various algorithms that parallelize A* and we choose to implement one or both of HDA* and GA*, depending on time availability. We will implement HDA* on the MPI platform and GA* on the CUDA platform.
 </p>
-   <li><a href="https://www.linkedin.com/in/katrinahu6/">Proposal PDF</a></li>
+   <li><a href="asset/15418-Final-Project-Proposal.pdf">Project Proposal PDF</a></li> -->
   </div>
  </body>
 </html>
