--- a/index.html
+++ b/index.html
@@ -5,14 +5,6 @@
    <link rel="stylesheet" href="css/styles.css">
  </head>
  <body>
-   <nav>
-     <ul>
-<!--        <li><a href="https://www.linkedin.com/in/katrinahu6/">Linkedin</a></li>
-       <li><a href="https://github.com/Katrina0406">Github</a></li>
-       <li><a href="resume/Katrina_Hu_Website_Resume.pdf">Resume</a></li> -->
-<!--       <object data="/resume/Katrina_Hu_Website_Resume.pdf" width="1000" height="1000" type='application/pdf'>Resume</object> -->
-     </ul>
-   </nav>
    <div class="container">
      <div class="blurb">
        <h1>Parallel A* Search Project</h1>
@@ -30,6 +22,15 @@
    <p>We propose to parallelize A* search in this project. There have been various algorithms that parallelize A* and we choose to implement one or both of HDA* and GA*, depending on time availability. We will implement HDA* on the MPI platform and GA* on the CUDA platform.
 </p>
    <li><a href="assets/15418-Final-Project-Proposal.pdf">Project Proposal PDF</a></li>
+   <h2>Milestone Report</h2>
+   <h3>Work Have Done:</h3>
+   <p>1. Set up A* sequential codebase.</p>
+   <p>2. Set up benchmarks for testing performance.</p>
+   <p>3. Finish a runnable version of HDA* parallel algorithm using MPI.</p>
+   <h3>Work To Do:</h3>
+   <p>1. Debug performance issue of current HDA* implementation.</p>
+   <p>2. Find or write more benchmarks for testing performance.</p>
+   <p>3. Implement other versions of parallel A* search.</p>
   </div>
  </body>
 </html>
