--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 </p>
    
    <h2>Milestone Report</h2>
+   <li><a href="assets/15418-Milestone-Report.pdf">Milestone Report PDF</a></li>
    <h3>Work Have Done:</h3>
    <p>1. Set up A* sequential codebase.</p>
    <p>2. Set up benchmarks for testing performance.</p>
