--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
    <p>1. Debug performance issue of current HDA* implementation.</p>
    <p>2. Find or write more benchmarks for testing performance.</p>
    <p>3. Implement other versions of parallel A* search.</p>
+
+   <h2>Final Report</h2>
+   <li><a href="assets/15418-Final-Report.pdf">Final Report PDF</a></li>
   </div>
  </body>
 </html>
